tests/baselines/reference/unusedMultipleParameter2InContructor.errors.txt
tests/cases/compiler/unusedMultipleParameter2InContructor.ts(2,17): error TS6133: 'person' is declared but never used.
tests/cases/compiler/unusedMultipleParameter2InContructor.ts(2,50): error TS6133: 'person3' is declared but never used.
tests/cases/compiler/unusedMultipleParameter2InContructor.ts(3,13): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameter2InContructor.ts (3 errors) ====
    class Dummy {
        constructor(person: string, person2: string, person3: string) {
                    ~~~~~~
!!! error TS6133: 'person' is declared but never used.
                                                     ~~~~~~~
!!! error TS6133: 'person3' is declared but never used.
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
            person2 = "Dummy value";
        }
    }